# rust-challenge

./: .gitignore  Cargo.toml
src/: main.rs
src/services/: decrypt.rs  mod.rs  parser.rs  sum_file.rs  sum_sentence.rs  sum_vocals.rs
